--- a/client/src/App.css
+++ b/client/src/App.css
@@ -55,6 +55,7 @@ body,
   font-weight: 100;
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 
 .not-complete-check {
